# tldrbot

./: .env.sample  .gitignore  README.md  pyproject.toml
src/tldrbot/: main.py  overview_summary.py  paper.py  utils.py
